require environment_id for release queries
